SessionAffinity/wlp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wlp-service
  labels:
    app: wlp-service
spec:
  type: LoadBalancer # Exposed over the internet through Azure Load Balancer
  sessionAffinity: ClientIP
  ports:
  - port: 443
    targetPort: 9443
    name: https
  - port: 80
    targetPort: 9080
    name: http
  selector:
    app: <podname>
